@@ -778,7 +778,7 @@ colors:         .byte 1, 1, 0, 7                ; player 1
         jmp init_get_set_go             ; transition to get_set_go state
 @end:
         inx
-        cpx #RESISTANCE_TBL_SIZE
+        cpx #(RESISTANCE_TBL_SIZE .MOD 256)
         bne :+
         ldx #RESISTANCE_TBL_SIZE-1
 :       stx resistance_idx_p1
@@ -995,7 +995,7 @@ decrease_speed_p1:
 
 end_p1:
         inx
-        cpx #RESISTANCE_TBL_SIZE
+        cpx #(RESISTANCE_TBL_SIZE .MOD 256)
         bne :+
         ldx #RESISTANCE_TBL_SIZE-1
 :       stx resistance_idx_p1
@@ -1075,7 +1075,7 @@ decrease_speed_p2:
 
 end_p2:
         inx
-        cpx #RESISTANCE_TBL_SIZE
+        cpx #(RESISTANCE_TBL_SIZE .MOD 256)
         bne :+
         ldx #RESISTANCE_TBL_SIZE-1
 :       stx resistance_idx_p2
@@ -1378,6 +1378,10 @@ tmp:
 
         lda p1_finished
         beq anim_riding                         ; riding animation
+
+        ldx #(RESISTANCE_TBL_SIZE/2)-1          ; if not riding, then it finishes
+        stx resistance_idx_p1                   ; so slow down quickly
+
         cmp #FINISH_STATE::WINNER
         beq anim_winner                         ; winner animation
 
@@ -1389,6 +1393,11 @@ tmp:
         sta SPRITE_PTR+3
         lda #SPRITES_POINTER+9                  ; body sprite
         sta SPRITE_PTR+2
+
+        ldx VIC_SPR1_Y                          ; hair and head
+        dex                                     ; one pixel above wheel
+        stx VIC_SPR2_Y
+        stx VIC_SPR3_Y
         rts
 
 anim_winner:
@@ -1405,6 +1414,11 @@ anim_winner:
         bne @end
         ldx #0
 @end:   stx frame_idx_p1
+
+        ldx VIC_SPR1_Y                          ; hair and head
+        dex                                     ; one pixel above wheel
+        stx VIC_SPR2_Y
+        stx VIC_SPR3_Y
         rts
 
 anim_riding:
@@ -1445,6 +1459,10 @@ anim_riding:
 
         lda p2_finished
         beq anim_riding                         ; riding animation
+
+        ldx #(RESISTANCE_TBL_SIZE/2)-1          ; if not riding, then it finishes
+        stx resistance_idx_p2                   ; so slow down quickly
+
         cmp #FINISH_STATE::WINNER
         beq anim_winner                         ; winner animation
 
@@ -1456,6 +1474,12 @@ anim_riding:
         sta SPRITE_PTR+7
         lda #SPRITES_POINTER+9                  ; body sprite
         sta SPRITE_PTR+6
+
+        ldx VIC_SPR5_Y                          ; hair and head
+        dex                                     ; one pixel above wheel
+        stx VIC_SPR6_Y
+        stx VIC_SPR7_Y
+
         rts
 anim_winner:
         lda scroll_speed_p2+1                   ; only anim when speed is low
@@ -1471,6 +1495,11 @@ anim_winner:
         bne @end
         ldx #0
 @end:   stx frame_idx_p2
+
+        ldx VIC_SPR5_Y                          ; hair and head
+        dex                                     ; one pixel above wheel
+        stx VIC_SPR6_Y
+        stx VIC_SPR7_Y
         rts
 
 anim_riding:
@@ -1768,15 +1797,39 @@ expected_joy:
 resistance_idx_p2:      .byte 0         ; index in resistance table
 resistance_idx_p1:      .byte 0         ; index in resistance table
 resistance_tbl:                         ; how fast the unicycle will desacelerate
-; autogenerated table: easing_table_generator.py -s64 -m32 -aTrue bezier:0,0.1,0.9,1
-.byte   0,  0,  1,  1,  1,  1,  2,  2
-.byte   3,  3,  3,  4,  4,  5,  5,  6
-.byte   6,  7,  8,  8,  9,  9, 10, 11
-.byte  11, 12, 13, 13, 14, 15, 15, 16
-.byte  17, 17, 18, 19, 19, 20, 21, 21
-.byte  22, 23, 23, 24, 24, 25, 26, 26
-.byte  27, 27, 28, 28, 29, 29, 29, 30
-.byte  30, 31, 31, 31, 31, 32, 32, 32
+; autogenerated table: easing_table_generator.py -s256 -m128 -aTrue bezier:0,0.05,0.95,1
+.byte   0,  0,  0,  0,  0,  1,  1,  1
+.byte   1,  1,  1,  2,  2,  2,  2,  2
+.byte   3,  3,  3,  3,  4,  4,  4,  4
+.byte   5,  5,  5,  6,  6,  6,  7,  7
+.byte   7,  8,  8,  9,  9,  9, 10, 10
+.byte  11, 11, 11, 12, 12, 13, 13, 14
+.byte  14, 15, 15, 16, 16, 17, 17, 18
+.byte  18, 19, 19, 20, 20, 21, 21, 22
+.byte  22, 23, 23, 24, 25, 25, 26, 26
+.byte  27, 28, 28, 29, 29, 30, 31, 31
+.byte  32, 32, 33, 34, 34, 35, 36, 36
+.byte  37, 38, 38, 39, 40, 40, 41, 42
+.byte  42, 43, 44, 44, 45, 46, 46, 47
+.byte  48, 48, 49, 50, 51, 51, 52, 53
+.byte  53, 54, 55, 55, 56, 57, 58, 58
+.byte  59, 60, 60, 61, 62, 63, 63, 64
+.byte  65, 65, 66, 67, 68, 68, 69, 70
+.byte  70, 71, 72, 73, 73, 74, 75, 75
+.byte  76, 77, 77, 78, 79, 80, 80, 81
+.byte  82, 82, 83, 84, 84, 85, 86, 86
+.byte  87, 88, 88, 89, 90, 90, 91, 92
+.byte  92, 93, 94, 94, 95, 96, 96, 97
+.byte  97, 98, 99, 99,100,100,101,102
+.byte 102,103,103,104,105,105,106,106
+.byte 107,107,108,108,109,109,110,110
+.byte 111,111,112,112,113,113,114,114
+.byte 115,115,116,116,117,117,117,118
+.byte 118,119,119,119,120,120,121,121
+.byte 121,122,122,122,123,123,123,124
+.byte 124,124,124,125,125,125,125,126
+.byte 126,126,126,126,127,127,127,127
+.byte 127,127,128,128,128,128,128,128
 RESISTANCE_TBL_SIZE = * - resistance_tbl
 
 jump_idx_p1:            .byte 0         ; sine pointer for jump/down sequence
